<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mainPadding"
    tools:context="com.depaul.csc472.yt_pointofscale.MainActivity"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newOrder"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_order"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/newItem"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_item"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"
            android:textSize="20sp"/>

        <AutoCompleteTextView
            android:id="@+id/itemEntered"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_item"
            android:imeOptions="actionNext"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/quantity"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/quantityEntered"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_quantity"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/priceEntered"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_price"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/total"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            tools:ignore="ButtonStyle" />

        <TextView
            android:id="@+id/totalCalculated"
            android:layout_width= "0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalCal"
            android:gravity="right"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/itemRecord"
            android:layout_width= "wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>
